# lichess-mcp-analyzer

./: .ai_state.json  .gitignore  LICENSE  README.md  README_en.md  lichess-mcp.bat  pyproject.toml
.github/workflows/: test.yml
docs/: .~lock.CONTEXT_A_ZAMER.md#  AUDIT_PROMPT_v1.0.md  CONTEXT_A_ZAMER.md  CONTEXT_INJECT.md  DIGITAL_TWIN_v1.0.md  EXTERNAL_REFERENCE_REPORT_2026-07-22.md  KALIBRACE_PLAN_2026-07-19.md  LLM_DIFFERENTIAL_ANALYSIS_2026-07-19.md  META_ANALYZA_METODOLOGIE_2026-07-19.md  MIKOLOV_KOMPRESE_V_PATTERN_ARCHITEKTURE.md  PHASE2_BUILD_PLAN.md  coaching_report_systeq_20260720_144656.md  coaching_report_systeq_cerebras_20260720_150807.md  coaching_report_systeq_deepseek_v4_flash_20260720_144956.md  coaching_report_systeq_deepseek_v4_flash_20260720_145107.md  coaching_report_systeq_deepseek_v4_flash_20260720_150008.md  coaching_report_systeq_incremental_20260720_160207.md  coaching_report_systeq_nvidia_20260720_144956.md  coaching_report_systeq_nvidia_20260720_145107.md  coaching_report_systeq_nvidia_20260720_150008.md  comparison_nvidia_vs_deepseek4_20260720_144956.md  comparison_nvidia_vs_deepseek4_20260720_145107.md  comparison_nvidia_vs_deepseek4_20260720_150008.md  differential_analysis_mono_vs_incr_20260720_160857.md  fullscale_comparison_20260720_183347.json  lichess_mcp_user_guide.md
logs/: DEBUG_REPORT_2026-07-22_v001.md  DEBUG_REPORT_2026-07-22_v002.md  DEBUG_REPORT_2026-07-22_v003.md
scripts/: batch_analyze_all.py  batch_finalize.py  calc_cost.py  compare_providers.py  differential_analysis.py  fullscale_test.py  generate_dummy_cache.py  repair_cache.py  run_mcp_server.ps1  run_pipeline.py  setup_stockfish.ps1  test_cerebras.py  test_default_provider_switch.py  test_incremental_pipeline.py  test_llm_cascade.py  test_llm_layer.py  test_optimized_pipeline.py  test_pipeline_games.py  test_pipeline_mode.py  verify_a4_fix.py  verify_all_providers.py  verify_fixed_llm.py
src/: server.py
tests/: test_engine_client.py  test_prompt_contract.py  test_services.py
(+60 files in other folders)
