[project]
name = "lichess-analyzer-mcp"
version = "0.1.0"
description = "MCP server for Lichess chess analysis with pattern detection and spaced repetition"
requires-python = ">=3.12, <3.14"
dependencies = [
    "mcp>=1.0.0",
    "berserk>=0.14.0",
    "chess>=1.11.0,<2",
    "httpx>=0.28.0",
]

[project.scripts]
lichess-mcp = "lichess_analyzer_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lichess_analyzer_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "coverage>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
